--- a/src/components/main.css
+++ b/src/components/main.css
@@ -18,14 +18,16 @@ background-color: rgb(66, 61, 61);
   padding-top: 30px;
   margin: 0px;
   display: grid;
-  grid-template: 75px 75px 75px / 75px 75px 75px;
+  grid-template: repeat(12 , 1fr)/ 75px 75px 75px;
+  justify-content: center;
+  align-content: center;
 }
 
 .tic {
   height: 75px;
   width: 75px;
   background-color:black;
-  border: 10px solid grey;
+  border: 4px solid grey;
 }
 .tic:hover{
   background-color: rgb(100, 98, 100);
@@ -41,12 +43,12 @@ div h1{
 
 
 #reset {
-    position: absolute;
-    bottom: -60px;
-    width:245px;
+    grid-column: 1 / -1;
+    width:auto;
+    margin-top: 30px;
     background-color: rgb(61, 60, 61);
     color: thistle;
-    font-weight:bolder ;
+    font-weight:bolder;
 }
 
 #win {
