--- a/src/components/main.css
+++ b/src/components/main.css
@@ -53,15 +53,17 @@ div h1{
 
 #win {
   position: absolute;
-  top:400px;
+  top:450px;
+  font-size: 60px;
   color: green;
   padding-top: 20px;
   padding-left:40px;
 }
 #los {
   position: absolute;
-  top:400px;
+  top:450px;
   color: red;
+  font-size: 60px;
   padding-top: 20px;
   padding-left:40px;
 }
